
28/01/2011 Changes

Adding tests to Analyser to drive out generation of method classes.


27/01/2011 Changes

Implemented parsing of 'chunk' file format fragments.
Add node creation and analysis for chunks, including method patterns.


26/01/2011 Changes

Lookup existing class when making subclass (dont assume it is a new class).
Modified message send handling to reload classes that are bootstrapped from source
when they dont understand a message. After reload message is resent.


25/01/2011 Changes

Cleaned up Bootstrapper class and added more to the hierarchy of classes that gets
bootstrapped. These placeholder skeleton classes will be reloaded from source at a later
point.
I think the hierarchy is correct and I need to double check.
Reimplemented primitive subclassing to use cleaned up Bootstrapper methods.
Removed duplicate registration of new class during subclass.
Added primitive names to classes - java toString() returns this name. Helps debugging.


21/01/2011 Changes

Added bootstrap superclass to bootstrapped String and Symbol so that method lookup
doesnt throw NPE.
Renamed basicAt/basicAtPut to primitiveAt and primitiveAtPut to remove possible confusion with
Smalltalk runtime method of same name.


20/01/2011 Changes

Added generation of Binary Message Send.


19/01/2011 Changes

Added logging around Smalltalk class so verbose option shows what is being done by Redline.
Added parsing of BinaryMessageSends. Still need to support generating code from them.


18/01/2011 Changes

Added logging using a Java Logging Framework. Logging has to work for simple apps as well as
those that run within a J2EE Web Container.
Using SL4J for logging to users can choose their own framework.
Added bootstrap of UndefinedObject and 'nil'.


16/01/2011 Changes

Loading classes from source to registered instances!
Added Trace option to command line. Turn trace on for *lots* of output.


15/01/2011 Changes

Added bootstrap of Symbol and String class so we can create Classes.